test/errors/indexed_offsets_error/zs/enum_value_expression_error.zs
package enum_value_expression_error;

enum uint8 Enumeration
{
    VALUE1 = @index,
    VALUE2 = @index + 2
};
